--- a/HappyCup/app/src/main/res/values/strings.xml
+++ b/HappyCup/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">HappyCup</string>
+    <string name="app_name">Cupping</string>
     <string name="id">아이디</string>
     <string name="password">비밀번호</string>
     <string name="login">로그인</string>
     <string name="auto_login">자동로그인</string>
     <string name="connect_fail">연결실패</string>
     <string name="confirm_login">님 로그인 되었습니다.</string>
-
 </resources>
