--- a/HappyCup/app/src/main/res/values/strings.xml
+++ b/HappyCup/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cupping</string>
+    <string name="app_name">cupping</string>
     <string name="id">아이디</string>
     <string name="password">비밀번호</string>
     <string name="login">로그인</string>
